=== HEAD

* Add db2 jdbc subadapter (jeremyevans)

* Fix the db2 adapter so it actually works (jeremyevans)

* Add ibmdb adapter for accessing DB2 (roylez, jeremyevans)

* Add much better support for DB2 databases (roylez, jeremyevans)

* Handle SQL::AliasedExpressions and SQL::JoinClauses in Dataset#select_all (jeremyevans)

* Speed up type translation slightly in mysql, postgres, and sqlite adapters (jeremyevans)

* Add Dataset#supports_cte_in_subqueries? for checking whether database supports WITH in subqueries (jeremyevans)

* Allow Model.set_dataset to accept Sequel::LiteralString arguments as table names (jeremyevans)

* Association :after_load hooks in lazy loading are now called after the associated objects have been cached (jeremyevans)
 
* Emulate handling of extract on MSSQL, using datepart (jeremyevans)

* Emulate handling of extract on SQLite, but you need to set Database#use_timestamp_timezones = false (jeremyevans)

* Abstract handling of ComplexExpressionMethods#extract so that it can work on databases that don't implement extract (jeremyevans)

* Emulate xor operator on SQLite (jeremyevans)

* Add Dataset#supports_where_true? for checking if the database supports WHERE true (or WHERE 1 if 1 is true) (jeremyevans)

* Fix eager loading via eager of one_to_one associations that match multiple associated objects and use order to pick the first one (jeremyevans)

=== 3.27.0 (2011-09-01)

* Add support for native prepared statements to the tinytds adapter (jeremyevans)

* Add support for native prepared statements and stored procedures to the mysql2 adapter (jeremyevans)

* Support dropping primary key, foreign key, and unique constraints on MySQL via the drop_constraint :type option (jeremyevans)

* Add Sequel::SQLTime class for handling SQL time columns (jeremyevans)

* Typecast DateTime objects to Date for date columns (jeremyevans)
