@@ -1,5 +1,7 @@
 === HEAD
 
+* Add support for the association :limit option when eager loading via .eager for *_many associations (jeremyevans)
+
 * Add db2 jdbc subadapter (jeremyevans)
 
 * Fix the db2 adapter so it actually works (jeremyevans)
